# USurf-file-manager

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/erman/draverfm/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/erman/drawerfm/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/erman/usurf/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
app/src/main/cpp/cmd/: command.cpp  command.h
app/src/main/cpp/compat/: android_compat.h
app/src/main/java/com/erman/draverfm/: MainActivity.kt
app/src/main/java/com/erman/draverfm/ui/: Credits.kt  FTPFragment.kt  PreferencesFragment.kt
app/src/main/java/com/erman/drawerfm/activities/: FTPServerActivity.kt  FragmentActivity.kt  GeneralStorageInfo.kt  MainActivity.kt  PreferencesActivity.kt
app/src/main/java/com/erman/drawerfm/adapters/: DirectoryRecyclerViewAdapter.kt  ShortcutsRecyclerViewAdapter.kt
app/src/main/java/com/erman/drawerfm/common/: Constants.kt
app/src/main/java/com/erman/drawerfm/database/: Shortcut.kt
app/src/main/java/com/erman/drawerfm/dialogs/: AboutDrawerFMDialog.kt  ConfirmationDialog.kt  CreateFileDialog.kt  CreateFolderDialog.kt  CreateNew.kt  CreateShortcutDialog.kt  EditDialog.kt  EditPasswordDialog.kt  EditPortDialog.kt  ErrorDialog.kt  FileInformationDialog.kt  ProgressDialog.kt  PropertiesDialog.kt  RenameDialog.kt  ShortcutOptions.kt  ShortcutOptionsDialog.kt
app/src/main/java/com/erman/drawerfm/file/: DirectoryData.kt  FileProvider.kt  GenericFileProvider.kt
app/src/main/java/com/erman/drawerfm/fragments/: FileListPreferencesFragment.kt  FileSearchFragment.kt  ListDirFragment.kt  MainPreferencesFragment.kt  PreferencesFragment.kt  ProgressFragment.kt  SettingsFragment.kt
app/src/main/java/com/erman/drawerfm/interfaces/: OnFileClickListener.kt  OnItemClickListener.kt
app/src/main/java/com/erman/drawerfm/services/: FTPServer.kt
app/src/main/java/com/erman/drawerfm/utilities/: BroadcastReceiver.kt  FTPServer.kt  FTPServerBroadcastListener.kt  FileBroadcastReceiver.kt  FileHandler.kt  FileSearchFilter.kt  FindFilePaths.kt  FindStoragePaths.kt  RootHandler.kt  StorageUsageData.kt
app/src/main/java/com/erman/usurf/: MainActivity.kt  MainApplication.kt
app/src/main/java/com/erman/usurf/activity/: MainActivity.kt  MainViewModel.kt  PermissionHandler.kt
app/src/main/java/com/erman/usurf/app/: MainApplication.kt
app/src/main/java/com/erman/usurf/application/: MainApplication.kt
app/src/main/res/anim/: item_animation_fall_down.xml  item_animation_move_up.xml  layout_animation_fadein.xml  layout_animation_fadeout.xml  layout_animation_move_up.xml
app/src/main/res/drawable/: bottom_bar_background.xml  button_frame.xml  button_primary_background.xml  button_ripple_effect.xml  button_selectable_background.xml  button_style_dark.xml  button_style_light.xml  button_used_space_indicator.xml  card_favorite_background.xml  dialog_background.xml  ic_add.xml  ic_android.xml  ic_audio.xml  ic_chevron_right.xml  ic_compressed.xml  ic_copy.xml  ic_delete.xml  ic_document.xml  ic_down_arrow.xml  ic_empty_folder.xml  ic_favorite.xml  ic_favorite_disabled.xml  ic_file.xml  ic_file_white.xml  ic_folder.xml  ic_folder_white.xml  ic_ftp.xml  ic_ftp_notification.xml  ic_hdd.xml  ic_history.xml  ic_home.xml  ic_image.xml  ic_info.xml  ic_info_menu.xml  ic_launcher_background.xml  ic_library.xml  ic_menu.xml  ic_move.xml  ic_nonempty_folder.xml  ic_plus.xml  (+29 more)
app/src/main/res/drawable-v21/: button_primary_background.xml  button_ripple_effect.xml  button_selectable_background.xml  card_favorite_background.xml  selection_background.xml  separator_gradient_side.xml  separator_gradient_top.xml  storage_button_style.xml
app/src/main/res/drawable-v24/: separator_gradient_side.xml  storage_button_style.xml
app/src/main/res/layout/: about_drawerfm_dialog.xml  activity_fragment.xml  activity_ftpserver.xml  activity_general_storage_info.xml  activity_main.xml  activity_preferences.xml  app_bar_main.xml  content_main.xml  dialog_create_file.xml  dialog_create_shortcut.xml  dialog_edit.xml  dialog_edit_favorite.xml  dialog_edit_password.xml  dialog_edit_port.xml  dialog_edit_shortcut.xml  dialog_file_information.xml  dialog_properties.xml  dialog_rename_file.xml  dialog_shortcut_options.xml  directory_recycler_grid_layout.xml  directory_recycler_layout.xml  directory_recycler_list_layout.xml  file_list_fragment.xml  fragment_directory.xml  fragment_file_list.xml  fragment_ftp.xml  fragment_history.xml  fragment_home.xml  fragment_information.xml  fragment_library.xml  fragment_progress_fragment.xml  nav_header_main.xml  recycler_directory_layout.xml  recycler_favorite_layout.xml  recycler_shortcut_layout.xml  shortcut_recycler_layout.xml  storage_button.xml
app/src/main/res/layout-v21/: fragment_directory.xml  fragment_home.xml  storage_button.xml
app/src/main/res/menu/: activity_main_drawer.xml  bottom_options_menu.xml  buttom_optiions_menu.xml  main_activity_option_menu.xml  menu_directory.xml  menu_fragment_activity.xml  menu_main_activity.xml  side_options_menu.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: array.xml  attr.xml  colors.xml  dimens.xml  drawables.xml  ids.xml  strings.xml  styles.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/xml/: file_provider_paths.xml  preferences.xml  preferences_file_list.xml  preferences_main.xml  settings.xml
app/src/test/java/com/erman/draverfm/: ExampleUnitTest.kt
app/src/test/java/com/erman/drawerfm/: ExampleUnitTest.kt
app/src/test/java/com/erman/usurf/: ExampleUnitTest.kt
config/detekt/: detekt.yml
gradle/wrapper/: gradle-wrapper.properties
(+140 files in other folders)
